# modules_cpp

./: .gitignore  README.md
fem_2d_pardiso/: CMakeLists.txt
fem_2d_pardiso/pardiso/: pardiso_sym_c.cpp  pardiso_unsym_c.cpp  test.cpp
fem_2d_pardiso/src/: FEMSolver.cpp  FEMSolver.h  main.cpp
fem_2d_petsc/: CMakeLists.txt
fem_2d_petsc/src/: FEMSolver.cpp  FEMSolver.h  main.cpp
mpi-laplace/c/: CMakeLists.txt  laplace_mpi.c  laplace_serial.c  utils_mpi.h  utils_serial.h  utils_timer.h
mpi-laplace/f90/: CMakeLists.txt  laplace_mpi.f90  laplace_serial.f90  readme.md  run.sh
mpi-laplace/openacc/: CMakeLists.txt  laplace_mpi-grid_openacc_async_margin.c
mpi-pi-cal/: CMakeLists.txt  calc_pi_mpi.c  readme.txt
named_pipe_write/: CMakeLists.txt  PipeWriter.cpp  PipeWriter.h  main_named_pipe.cpp  python_reader.py  run_python.bat
python_cpp_link/: CMakeLists.txt  README.md  readme-ffi-source.md  run_python.bat
python_cpp_link/boost/: CMakeLists.txt  README.md  mycpp.cpp  test.py
python_cpp_link/boostIO/: mycpp.cpp  test.py
python_cpp_link/ctypes/: test.py
python_cpp_link/ctypes_ffi/: CMakeLists.txt  mycpp.cpp  run_python.bat  test.py
python_cpp_link/ffi/: test.py
python_cpp_link/pybind11/: mycpp.cpp  test.py
python_cpp_link/pybind11_native/: CMakeLists.txt  myadd.pyd  test.py
python_cpp_link/pybind11_vcpkg/: CMakeLists.txt  myadd.cpp  myadd2.cpp  test.py
python_cpp_link/swig/: CMakeLists.txt  README.md  mycpp.cpp  mycpp.i  mycpp_wrap.cxx  test.py
python_cpp_link/swig/python-1/: _mycpp.pyd  mycpp.py  test.py
python_cpp_link/swig/python-2/: _mycpp2.pyd  mycpp2.py  test.py
spdlog_wrapper/: CMakeLists.txt  Logger.h  main.cpp  spdlog_wrap.cpp  spdlog_wrap.h  spdlog_wrapper.cpp
websocket_test/: CMakeLists.txt  README.md  client.py  main.cpp  run_python.bat  server.cpp
websocket_test/python/: client.py
websocket_test/src/: WebSocketServer.cpp  WebSocketServer.hpp  main.cpp
